--- a/index.html
+++ b/index.html
@@ -448,6 +448,171 @@
     padding: 0.8rem 0;
   }
 }
+
+/* Contact Page Styles */
+.contact-hero {
+  background: linear-gradient(135deg, #2c3e50 0%, #3498db 100%);
+  color: white;
+  padding: 100px 0;
+  position: relative;
+}
+
+.min-vh-80 {
+  min-height: 80vh;
+}
+
+.hero-wave {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  line-height: 0;
+  color: #f8f9fa;
+}
+
+.hero-wave svg {
+  width: 100%;
+  height: 80px;
+}
+
+.contact-method-card {
+  transition: all 0.3s ease;
+  border-radius: 15px;
+}
+
+.contact-method-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 30px rgba(0,0,0,0.1) !important;
+}
+
+.contact-form .form-control,
+.contact-form .form-select {
+  border-radius: 12px;
+  border: 2px solid #e9ecef;
+  transition: all 0.3s ease;
+}
+
+.contact-form .form-control:focus,
+.contact-form .form-select:focus {
+  border-color: #3498db;
+  box-shadow: 0 0 0 0.2rem rgba(52, 152, 219, 0.25);
+}
+
+.contact-form .form-floating label {
+  color: #6c757d;
+}
+
+.info-card {
+  border-radius: 20px;
+}
+
+.map-card {
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.map-placeholder {
+  min-height: 300px;
+}
+
+.emergency-contact {
+  border-left: 4px solid #dc3545;
+}
+
+.fade-in-up {
+  animation: fadeInUp 1s ease-out;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.sticky-top {
+  top: 100px;
+}
+
+/* Custom button animations */
+.btn {
+  transition: all 0.3s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.btn:hover {
+  transform: translateY(-2px);
+}
+
+.btn:active {
+  transform: translateY(0);
+}
+
+/* Floating animation for hero content */
+@keyframes float {
+  0%, 100% { transform: translateY(0px); }
+  50% { transform: translateY(-10px); }
+}
+
+.hero-content {
+  animation: float 6s ease-in-out infinite;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .contact-hero {
+    padding: 80px 0;
+  }
+  
+  .display-3 {
+    font-size: 2.5rem;
+  }
+
+  .sticky-top {
+    position: relative;
+    top: 0;
+  }
+  
+  .contact-method-card {
+    margin-bottom: 1rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .contact-hero {
+    padding: 60px 0;
+  }
+  
+  .display-3 {
+    font-size: 2rem;
+  }
+  
+  .btn-lg {
+    padding: 0.75rem 1.5rem;
+    font-size: 1rem;
+  }
+}
+
+/* Form focus effects */
+.form-control:focus,
+.form-select:focus {
+  transform: translateY(-2px);
+  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+}
+
+/* Card hover effects */
+.card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+}
     </style>
     <title>Vite + React</title>
 
